--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bienvenido a JBL Lovers, para todos los amantes de la excelencia en sonido">
-    <title>JBL Lovers - Excelencia en Sonido</title>
+    <meta name="description"
+        content="Descubre una amplia gama de productos JBL en nuestra tienda en línea. Desde potentes parlantes hasta auriculares de alta calidad, en JBL Lovers encontrarás el sonido perfecto para cada ocasión. ¡Explora y elige lo mejor en audio!">
+    <title>Productos JBL: Parlantes y Auriculares de Calidad - JBL Lovers</title>
     <!-- BS CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
