--- a/auriculares.html
+++ b/auriculares.html
@@ -119,7 +119,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -132,7 +132,7 @@
                 <div class="card container-fluid">
                     <img src="img/T230.png" alt="Imagen de T230">
                     <div class="card-body">
-                        <h5 class="card-title nombreProducto">Flip6</h5>
+                        <h5 class="card-title nombreProducto">T230NC</h5>
                         <p class="card-text">Con cancelacion de sonido</p>
 
                         <!-- Button trigger modal -->
@@ -157,7 +157,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 text-center imagenProducto">
                 <div class="card container-fluid img">
-                    <img src="img/T510BT.png" alt="Imagen de T510BT" class="imagenProducto">
+                    <img src="img/T130.png" alt="Imagen de T510BT" class="imagenProducto">
                     <div class="card-body">
                         <h5 class="card-title nombreProducto">T510BT</h5>
                         <p class="card-text">Lleva la musica donde quieras</p>
@@ -195,7 +195,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -206,7 +206,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 text-center">
                 <div class="card container-fluid">
-                    <img src="img/T750BT.jpg" alt="Imagen de T750BT">
+                    <img src="img/T230.png" alt="Imagen de T750BT">
                     <div class="card-body">
                         <h5 class="card-title nombreProducto">T750BT</h5>
                         <p class="card-text">Todo el poder inalambrico</p>
@@ -233,7 +233,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -347,7 +347,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -385,7 +385,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
