--- a/gaming.html
+++ b/gaming.html
@@ -92,7 +92,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 text-center">
                 <div class="card container-fluid">
-                    <img src="img/Q100.jpg" alt="Imagen de Q100">
+                    <img src="img/Q600.jpg" alt="Imagen de Q100">
                     <div class="card-body">
                         <h5 class="card-title nombreProducto">Q100</h5>
                         <p class="card-text">El pequeño del juego</p>
@@ -119,7 +119,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -157,7 +157,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
 
             <div class="col-xl-3 col-md-6 col-sm-12 text-center">
                 <div class="card container-fluid">
-                    <img src="img/Q400.jpg" alt="Imagen de Q400">
+                    <img src="img/Q800.jpg" alt="Imagen de Q400">
                     <div class="card-body">
                         <h5 class="card-title nombreProducto">Q400</h5>
                         <p class="card-text">Jugando a todas luces</p>
@@ -195,7 +195,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -233,7 +233,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -347,7 +347,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -385,7 +385,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
