--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="tituloProducto">
-            <h2>JBL Lovers - Un sitio con excelencia en sonido</h2>
+            <h2>Productos JBL: Parlantes y Auriculares de Calidad - JBL Lovers</h2>
         </div>
 
         <div class="container mt-5">
