--- a/parlantes.html
+++ b/parlantes.html
@@ -119,7 +119,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -157,7 +157,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -233,7 +233,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -309,7 +309,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -347,7 +347,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
@@ -385,7 +385,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Cancelar</button>
-                                        <button type="button" class="btn btn-primary">Confirmar</button>
+                                        <button type="button" class="btn colorBtn">Confirmar</button>
                                     </div>
                                 </div>
                             </div>
