--- a/contacto.html
+++ b/contacto.html
@@ -113,10 +113,12 @@
                 <div class="col-md-6 text-center">
                     <!-- Columna de la ubicación -->
                     <h1>Ubicación de Nuestra Oficina</h1>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.136439412593!2d-56.13858872334985!3d-34.90302537336842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f811610232aff%3A0xccbfb691fb160492!2sMontevideo%20Shopping%20Center!5e0!3m2!1ses-419!2suy!4v1694392604617!5m2!1ses-419!2suy"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.136439412593!2d-56.13858872334985!3d-34.90302537336842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f811610232aff%3A0xccbfb691fb160492!2sMontevideo%20Shopping%20Center!5e0!3m2!1ses-419!2suy!4v1694392604617!5m2!1ses-419!2suy"
+                            class="embed-responsive-item" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
             </div>
         </div>
